fix: button color in dark mode and high contrast mode

--- a/theia-extensions/product/src/browser/toolbar/split-button.css
+++ b/theia-extensions/product/src/browser/toolbar/split-button.css
@@ -13,11 +13,12 @@
 
 /* Base action item styling */
 .split-button .action-item {
-  border: none;
+  color: var(--theia-icon-foreground);
   background: transparent;
   padding: 0;
   cursor: pointer;
   border-radius: 3px;
+  border: 1px solid var(--theia-button-border);
   transition: background-color 0.1s ease;
   height: 100%;
   align-self: stretch;
